--- a/public/home/css/style.css
+++ b/public/home/css/style.css
@@ -460,11 +460,19 @@ ul.mnboxl ul li:hover > ul{
 }
 .pricesp{
 	display: block;
-	text-align: center;
-	font-size: 20px;
+	font-size: 16px;
+	font-weight: normal !important;
+    color: black !important;
+    padding: 10px 0;
+}
+.pricesp-promo{
+	display: block;
+	/* text-align: center; */
+	font-size: 16px;
 	font-weight: normal !important;
     color: #CA0000 !important;
-    padding: 10px 0;
+    /* padding: 10px 0; */
+    text-decoration: line-through;
 }
 .boxmain{
 	margin-bottom: 20px;
