--- a/public/home/css/style.css
+++ b/public/home/css/style.css
@@ -464,6 +464,14 @@ ul.mnboxl ul li:hover > ul{
 	font-weight: normal !important;
     color: black !important;
     padding: 10px 0;
+    text-decoration: line-through;
+}
+.pricesp-default{
+	display: block;
+	font-size: 16px;
+	font-weight: normal !important;
+    color: #CA0000 !important;
+    padding: 10px 0;
 }
 .pricesp-promo{
 	display: block;
@@ -472,14 +480,15 @@ ul.mnboxl ul li:hover > ul{
 	font-weight: normal !important;
     color: #CA0000 !important;
     /* padding: 10px 0; */
-    text-decoration: line-through;
+
 }
 .boxmain{
 	margin-bottom: 20px;
 }
 .tit-boxmain{
 	display: block;
-	height: 35px;
+    height: 35px;
+    color:red;
 }
 .tit-boxmain h3{
 	display: block;
@@ -689,3 +698,125 @@ h2{
     margin-left: 5em;
     margin-bottom: 1em;
 }
+
+img {
+    max-width: 100%; }
+
+  .preview {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column; }
+    @media screen and (max-width: 996px) {
+      .preview {
+        margin-bottom: 20px; } }
+
+  .preview-pic {
+    -webkit-box-flex: 1;
+    -webkit-flex-grow: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1; }
+
+  .preview-thumbnail.nav-tabs {
+    border: none;
+    margin-top: 15px; }
+    .preview-thumbnail.nav-tabs li {
+      width: 18%;
+      margin-right: 2.5%; }
+      .preview-thumbnail.nav-tabs li img {
+        max-width: 100%;
+        display: block; }
+      .preview-thumbnail.nav-tabs li a {
+        padding: 0;
+        margin: 0; }
+      .preview-thumbnail.nav-tabs li:last-of-type {
+        margin-right: 0; }
+
+  .tab-content {
+    overflow: hidden; }
+    .tab-content img {
+      width: 100%;
+      -webkit-animation-name: opacity;
+              animation-name: opacity;
+      -webkit-animation-duration: .3s;
+              animation-duration: .3s; }
+
+  .card {
+    margin-top: 20px;
+    background: #eee;
+    padding: 3em;
+    line-height: 1.5em; }
+
+  @media screen and (min-width: 997px) {
+    .wrapper {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex; } }
+
+  .details {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column; }
+
+  .colors {
+    -webkit-box-flex: 1;
+    -webkit-flex-grow: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1; }
+
+  .product-title, .price, .sizes, .colors {
+    text-transform: UPPERCASE;
+    font-weight: bold; }
+
+  .checked, .price span {
+    color: #ff9f1a; }
+
+  .product-title, .rating, .product-description, .price, .vote, .sizes {
+    margin-bottom: 15px; }
+
+  .product-title {
+    margin-top: 0; }
+
+  .size {
+    margin-right: 10px; }
+    .size:first-of-type {
+      margin-left: 40px; }
+
+  .color {
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 10px;
+    height: 2em;
+    width: 2em;
+    border-radius: 2px; }
+    .color:first-of-type {
+      margin-left: 20px; }
+
+  .not-available {
+    text-align: center;
+    line-height: 2em; }
+    .not-available:before {
+      font-family: fontawesome;
+      content: "\f00d";
+      color: #fff; }
+
+  .orange {
+    background: #ff9f1a; }
+
+  .green {
+    background: #85ad00; }
+
+  .blue {
+    background: #0076ad; }
