--- a/public/home/css/style.css
+++ b/public/home/css/style.css
@@ -1,7 +1,7 @@
 body{
 	color: #333;
 	font-size: 14px;
-	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 img{
 	width: auto;
@@ -702,121 +702,128 @@ h2{
 img {
     max-width: 100%; }
 
-  .preview {
+.preview {
+display: -webkit-box;
+display: -webkit-flex;
+display: -ms-flexbox;
+display: flex;
+-webkit-box-orient: vertical;
+-webkit-box-direction: normal;
+-webkit-flex-direction: column;
+    -ms-flex-direction: column;
+        flex-direction: column; }
+@media screen and (max-width: 996px) {
+    .preview {
+    margin-bottom: 20px; } }
+
+.preview-pic {
+-webkit-box-flex: 1;
+-webkit-flex-grow: 1;
+    -ms-flex-positive: 1;
+        flex-grow: 1; }
+
+.preview-thumbnail.nav-tabs {
+border: none;
+margin-top: 15px; }
+.preview-thumbnail.nav-tabs li {
+    width: 18%;
+    margin-right: 2.5%; }
+    .preview-thumbnail.nav-tabs li img {
+    max-width: 100%;
+    display: block; }
+    .preview-thumbnail.nav-tabs li a {
+    padding: 0;
+    margin: 0; }
+    .preview-thumbnail.nav-tabs li:last-of-type {
+    margin-right: 0; }
+
+.tab-content {
+overflow: hidden; }
+.tab-content img {
+    width: 80%;
+    -webkit-animation-name: opacity;
+            animation-name: opacity;
+    -webkit-animation-duration: .3s;
+            animation-duration: .3s; }
+
+.card {
+margin-top: 20px;
+background: #fff;
+padding: 3em;
+line-height: 1.5em;
+border:1px solid rgb(87, 86, 86); }
+
+@media screen and (min-width: 997px) {
+.wrapper {
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-            flex-direction: column; }
-    @media screen and (max-width: 996px) {
-      .preview {
-        margin-bottom: 20px; } }
+    display: flex; } }
 
-  .preview-pic {
-    -webkit-box-flex: 1;
-    -webkit-flex-grow: 1;
-        -ms-flex-positive: 1;
-            flex-grow: 1; }
+.details {
+display: -webkit-box;
+display: -webkit-flex;
+display: -ms-flexbox;
+display: flex;
+-webkit-box-orient: vertical;
+-webkit-box-direction: normal;
+-webkit-flex-direction: column;
+    -ms-flex-direction: column;
+        flex-direction: column; }
 
-  .preview-thumbnail.nav-tabs {
-    border: none;
-    margin-top: 15px; }
-    .preview-thumbnail.nav-tabs li {
-      width: 18%;
-      margin-right: 2.5%; }
-      .preview-thumbnail.nav-tabs li img {
-        max-width: 100%;
-        display: block; }
-      .preview-thumbnail.nav-tabs li a {
-        padding: 0;
-        margin: 0; }
-      .preview-thumbnail.nav-tabs li:last-of-type {
-        margin-right: 0; }
+.colors {
+-webkit-box-flex: 1;
+-webkit-flex-grow: 1;
+    -ms-flex-positive: 1;
+        flex-grow: 1; }
 
-  .tab-content {
-    overflow: hidden; }
-    .tab-content img {
-      width: 100%;
-      -webkit-animation-name: opacity;
-              animation-name: opacity;
-      -webkit-animation-duration: .3s;
-              animation-duration: .3s; }
+.product-title, .price, .sizes, .colors {
+text-transform: UPPERCASE;
+font-weight: bold; }
 
-  .card {
-    margin-top: 20px;
-    background: #eee;
-    padding: 3em;
-    line-height: 1.5em; }
+.checked, .price span {
+color: #ff9f1a; }
 
-  @media screen and (min-width: 997px) {
-    .wrapper {
-      display: -webkit-box;
-      display: -webkit-flex;
-      display: -ms-flexbox;
-      display: flex; } }
+.product-title, .rating, .product-description, .price, .vote, .sizes {
+margin-bottom: 15px; }
 
-  .details {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-            flex-direction: column; }
+.product-title {
+margin-top: 0; }
 
-  .colors {
-    -webkit-box-flex: 1;
-    -webkit-flex-grow: 1;
-        -ms-flex-positive: 1;
-            flex-grow: 1; }
+.size {
+margin-right: 10px; }
+.size:first-of-type {
+    margin-left: 40px; }
 
-  .product-title, .price, .sizes, .colors {
-    text-transform: UPPERCASE;
-    font-weight: bold; }
+.color {
+display: inline-block;
+vertical-align: middle;
+margin-right: 10px;
+height: 2em;
+width: 2em;
+border-radius: 2px; }
+.color:first-of-type {
+    margin-left: 20px; }
 
-  .checked, .price span {
-    color: #ff9f1a; }
+.not-available {
+text-align: center;
+line-height: 2em; }
+.not-available:before {
+    font-family: fontawesome;
+    content: "\f00d";
+    color: #fff; }
 
-  .product-title, .rating, .product-description, .price, .vote, .sizes {
-    margin-bottom: 15px; }
+.orange {
+background: #ff9f1a; }
 
-  .product-title {
-    margin-top: 0; }
+.green {
+background: #85ad00; }
 
-  .size {
-    margin-right: 10px; }
-    .size:first-of-type {
-      margin-left: 40px; }
+.blue {
+background: #0076ad; }
 
-  .color {
-    display: inline-block;
-    vertical-align: middle;
-    margin-right: 10px;
-    height: 2em;
-    width: 2em;
-    border-radius: 2px; }
-    .color:first-of-type {
-      margin-left: 20px; }
-
-  .not-available {
-    text-align: center;
-    line-height: 2em; }
-    .not-available:before {
-      font-family: fontawesome;
-      content: "\f00d";
-      color: #fff; }
-
-  .orange {
-    background: #ff9f1a; }
-
-  .green {
-    background: #85ad00; }
-
-  .blue {
-    background: #0076ad; }
+div.title-detail a{
+    text-decoration: none;
+    color:black;
+    font-size: 20px;
+}
