--- a/public/admin/css/sb-admin.css
+++ b/public/admin/css/sb-admin.css
@@ -3472,7 +3472,7 @@ input[type="button"].btn-block {
 .dropdown-item:hover, .dropdown-item:focus {
   color: #16181b;
   text-decoration: none;
-  background-color: #f8f9fa;
+  background-color: #6a6c6d;
 }
 
 .dropdown-item.active, .dropdown-item:active {
